--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="lighttek">
+<!-- <html lang="en" data-theme="lighttek"> -->
+<html lang="en" data-theme="light">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
