pwa and routing

--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -4,14 +4,19 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
     <title>Division of Computer Science and Engineering at Chalmers</title>
+    <meta name="description" content="Datateknologsektionen"/>
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml"/>
+    <link rel="alternate icon" href="/favicon.ico" type="image/png" sizes="16x16"/>
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180"/>
+    <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF"/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <script src="/src/index.tsx" type="module"></script>
+    <script src="/src/root.tsx" type="module"></script>
   </body>
 </html>
